# PCQM

./: CMakeLists.txt  README.md  main.cpp  pcqm.cpp
include/: PointSet.h  pcqm.h  resources.h
resources/: embed.sh
